--- a/src/Components/DomainDetails/Card/Card.css
+++ b/src/Components/DomainDetails/Card/Card.css
@@ -29,7 +29,7 @@
 
 .topic-card h2 {
   font-weight: 500;
-  color: rgb(48, 46, 46);
+  color: var(--text);   /* changed */
   font-size: 1.875rem;
   line-height: 1.3;
 }
@@ -37,18 +37,17 @@
 .topic-card p {
   font-weight: 300;
   font-size: 1rem;
-  color: rgb(66, 64, 64);
+  color: var(--muted);  /* changed */
   line-height: 1.3;
   max-width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
   max-height: 6.25rem;
   font-weight: normal;
-  /* white-space: nowrap; */
 }
 
 .topic-card a {
-  color: rgb(66, 64, 64);
+  color: var(--link);   /* changed */
   display: flex;
   align-items: center;
   gap: 0.625rem;
@@ -57,7 +56,7 @@
 }
 
 .link-text {
-  color: black;
+  color: var(--text);
   font-weight: light;
   font-size: 1rem;
   line-height: 1.3;
