--- a/src/Components/DomainDetails/ReadMore/ReadMore.css
+++ b/src/Components/DomainDetails/ReadMore/ReadMore.css
@@ -11,8 +11,6 @@ body.active-modal {
 
 .modal,
 .overlay {
-  /* width: 100vw;
-  height: 100vh; */
   top: 0;
   left: 0;
   right: 0;
@@ -23,6 +21,7 @@ body.active-modal {
 
 .modal-content a {
   font-weight: 800;
+  color: var(--link);   /* changed */
 }
 
 .heading,
@@ -36,7 +35,7 @@ a p.link {
 }
 
 .overlay {
-  background: rgba(49, 49, 49, 0.8);
+  background: rgba(0, 0, 0, 0.6);  /* changed */
 }
 .modal-content {
   position: absolute;
@@ -44,9 +43,9 @@ a p.link {
   left: 50%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
-  background: var(--card);
-  color: var(--text);
-  border: 1px solid var(--elev);  /* remove if you don’t want a border */
+  background: var(--card);   /* already good */
+  color: var(--text);        /* already good */
+  border: 1px solid var(--elev); 
   padding: 14px 28px;
   border-radius: 3px;
   width: 350px;
@@ -58,6 +57,7 @@ a p.link {
   top: 10px;
   right: 10px;
   padding: 5px 7px;
+  color: var(--text);   /* added to follow theme */
 }
 
 @media only screen and (min-width: 1000px) {
