--- a/src/Pages/DomainDetails/DomainDetails.module.css
+++ b/src/Pages/DomainDetails/DomainDetails.module.css
@@ -129,7 +129,7 @@ h1 {
   /* identical to box height, or 160% */
 
   margin-right: 1rem;
-  color: #000000;
+  color: var(--text);
 
   cursor: pointer;
 }
